<resources>
    <string name="app_name">UrlWideSearch</string>
    <string name="hint_start_url">Enter url as started place here</string>
    <string name="hint_text_to_search">Enter text to search</string>
    <string name="hint_max_threads">Threads? you have %s cores</string>
    <string name="hint_max_urls">Pages limit</string>
    <string name="start_search">Let\'s start search</string>
    <string name="text_occurrence_count">Text Occurrences count:</string>
    <string name="urls_fount">Urls found:</string>
    <string name="id">ID:</string>
    <string name="error_occurred">Error: %s</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="finished">Finished</string>
    <string name="cancel">Cancel</string>
    <string name="canceled">Canceled!</string>
    <string name="go_back">Go back</string>
</resources>
