<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".MainActivity">

 <EditText
	android:id="@+id/startUrl"
	android:hint="@string/hint_start_url"
	android:inputType="text"
	android:layout_height="wrap_content"
	android:layout_width="match_parent" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="42dp"
	app:layout_constraintStart_toStartOf="parent"
	app:layout_constraintEnd_toEndOf="parent"/>

 <EditText
	android:id="@+id/textToSearch"
	android:hint="@string/hint_text_to_search"
	android:inputType="text"
	android:layout_width="match_parent"
	android:layout_height="wrap_content" android:layout_marginTop="8dp"
	app:layout_constraintTop_toBottomOf="@+id/startUrl"/>

 <EditText
	android:id="@+id/maxTreads"
	android:inputType="number"
	android:hint="@string/hint_max_threads"
	android:layout_width="match_parent"
	android:layout_height="wrap_content" app:layout_constraintTop_toBottomOf="@+id/textToSearch"
	android:layout_marginTop="8dp"/>

 <EditText
	android:id="@+id/maxUrlCounts"
	android:inputType="number"
	android:hint="@string/hint_max_urls"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_marginTop="8dp"
	app:layout_constraintTop_toBottomOf="@+id/maxTreads"/>

 <Button
	android:id="@+id/startSearch"
	android:text="@string/start_search"
	android:layout_width="162dp"
	android:layout_height="wrap_content"
	android:layout_marginTop="8dp"
	app:layout_constraintTop_toBottomOf="@+id/maxUrlCounts"
	app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
 />


</androidx.constraintlayout.widget.ConstraintLayout>