<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
					 android:orientation="vertical"
					 android:layout_width="match_parent"
					 android:layout_height="60dp">
 <TextView
	android:id="@+id/vIdTitle"
	android:text="@string/id"
	android:layout_alignParentTop="true"
	android:layout_alignParentStart="true"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	style="@style/BaseTextItemResultStyle"/>
 <TextView
	android:id="@+id/vId"
	android:text="13"
	android:layout_alignParentTop="true"
	android:layout_toEndOf="@id/vIdTitle"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	style="@style/BaseTextItemResultStyle"/>
 <TextView
	android:id="@+id/vUrl"
	android:text="http://www.google.com"
	android:layout_toEndOf="@id/vId"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_marginStart="5dp"
	style="@style/BaseTextItemResultStyle"/>
 <View
	android:id="@+id/vResult"
	android:layout_alignParentEnd="true"
	android:layout_centerVertical="true"
	android:background="@color/green"
	android:layout_width="20dp"
	android:layout_height="20dp"
	android:layout_marginEnd="5dp"
	style="@style/BaseTextItemResultStyle"/>
 <TextView
	android:id="@+id/vTextOccurrencesTitle"
	android:text="@string/text_occurrence_count"
	android:layout_alignParentStart="true"
	android:layout_below="@id/vId"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	style="@style/BaseTextItemResultStyle"/>
 <TextView
	android:id="@+id/vFoundedPlacesCount"
	android:text="152"
	android:layout_toEndOf="@id/vTextOccurrencesTitle"
	android:layout_alignTop="@id/vTextOccurrencesTitle"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	style="@style/BaseTextItemResultStyle"/>
 <TextView
	android:id="@+id/vUrlOccurrencesTitle"
	android:text="@string/urls_fount"
	android:layout_toEndOf="@id/vFoundedPlacesCount"
	android:layout_below="@id/vId"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_marginStart="5dp"
	style="@style/BaseTextItemResultStyle"/>

 <TextView
	android:id="@+id/vFoundedUrlsCount"
	android:text="56"
	android:layout_toEndOf="@id/vUrlOccurrencesTitle"
	android:layout_below="@id/vId"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	style="@style/BaseTextItemResultStyle"/>
</RelativeLayout>